# pyropust

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  codecov.yml  pyproject.toml  survay.md  仕様書.md
.github/workflows/: ci.yml  publish.yml  release.yml
bench/: bench_blueprint_vs_python.py
docs/: errors.md  operations.md
pyrope/: __init__.py  __init__.pyi  blueprint.py  do.py  pyrope_native.pyi
pyropust/: __init__.py  __init__.pyi  catch.py  pyropust_native.pyi
src/: error.rs  lib.rs
src/data/: convert.rs  mod.rs  value.rs
src/ops/: apply.rs  error.rs  kind.rs  mod.rs
src/ops/apply/: coerce.rs  core.rs  map.rs  mod.rs  seq.rs  text.rs
src/py/: blueprint.rs  error.rs  mod.rs  op.rs  op_generated.rs  option.rs  result.rs
tests/: support.py  test_blueprint.py  test_direct_usage.py  test_examples.py  test_runtime.py  tests_support.py
tests/doctests/: test_exception_boundaries.py  test_getting_started.py  test_helpers.py  test_option_basics.py
tests/option/: test_conversion.py  test_methods.py  test_utility.py
tests/result/: test_composition.py  test_conversion.py  test_extraction.py  test_query.py  test_transformation.py  test_utility.py
tests/typing/: test_types.py  test_typing_mypy.py  test_typing_pyright.py  type_mode_probe.py
tools/: check_type_modes.py  gen_native_stub.py  gen_ops.py
